--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "esbuild-plugin-babel": "^0.2.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-libram": "^0.2.19",
+    "eslint-plugin-libram": "^0.2.32",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2",
     "webpack": "^5.61.0",
@@ -34,9 +34,9 @@
   },
   "dependencies": {
     "core-js": "^3.16.4",
-    "grimoire-kolmafia": "^0.3.16",
-    "kolmafia": "5.26781.0",
-    "libram": "^0.7.17"
+    "grimoire-kolmafia": "^0.3.18",
+    "kolmafia": "^5.27453.0",
+    "libram": "^0.8.3"
   },
   "author": "MrFizzyBubbs",
   "license": "ISC",
